Clear topology failures when no longer needed (#2864)
* Clear topology failures no longer needed